# fdp-service

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  main.cpp
benchmarks/: CMakeLists.txt  combined_pipeline_test.cpp  cpu_pipeline_test.cpp  default_pipeline_test.cpp  gpu_pipeline_test.cpp
benchmarks/common/: util.cpp  util.hpp
image_processing/: CMakeLists.txt
image_processing/include/: common_processor.hpp  pipeline.hpp  stage.hpp  work_queue.hpp
image_processing/src/: blur_stage.cpp  blur_stage.hpp  default_pipeline.cpp  default_processor.cpp  default_processor.hpp  defs.hpp  equalize_stage.cpp  equalize_stage.hpp  facial_cut_stage.cpp  facial_cut_stage.hpp  facial_preprocessor.cpp  facial_preprocessor.hpp  landmarks_processor.cpp  landmarks_processor.hpp  landmarks_stage.cpp  landmarks_stage.hpp  pipeline_impl.cpp  postprocess_cpu_stage.cpp  postprocess_cpu_stage.hpp  postprocess_gpu_stage.cpp  postprocess_gpu_stage.hpp  preprocess_cpu_stage.cpp  preprocess_cpu_stage.hpp  preprocess_gpu_stage.cpp  preprocess_gpu_stage.hpp  scale_stage.cpp  scale_stage.hpp  sharpen_stage.cpp  sharpen_stage.hpp
models/: facial-landmarks-35-adas-0002.xml
server/: CMakeLists.txt
server/include/: nips.hpp
server/src/: eureka_client.cpp  eureka_client.hpp  image_processor.cpp  image_processor.hpp  nips.cpp
